syntax = "proto3";
option go_package = "./";

package Calendar;

service Calendars {
    rpc FindByCalendarID (FindByCalendarIDRequest) returns (FindByCalendarIDResponse);
    rpc CreateCalendar (CreateCalendarRequest) returns (CreateCalendarResponse);
    rpc UpdateCalendar (UpdateCalendarRequest) returns (UqdateCalendarResponse);
    rpc DeleteCalendar (DeleteCalendarRequest) returns (DeleteCalendarResponse);
    rpc FindAllCalendars (FindAllCalendarsRequest) returns (FindAllCalendarsResponse);
}

message FindByCalendarIDRequest {
    string id = 1;
}

message FindByCalendarIDResponse {
    Calendar calendar = 1;
}

message CreateCalendarRequest {
    Calendar calendar = 1;
}

message CreateCalendarResponse {
    Calendar calendar = 1;
}

message UpdateCalendarRequest {
    Calendar calendar = 1;
}

message UqdateCalendarResponse {
    Calendar calendar = 1;
}

message DeleteCalendarRequest {
    string id = 1;
}

message DeleteCalendarResponse {
    string id = 1;
}

message FindAllCalendarsRequest {}

message FindAllCalendarsResponse {
  repeated Calendar calendar = 1;
}

message Calendar {
    string id = 1;
    string name = 2;
    string visibility = 3;
    string created_at = 4;
}
